- NEW: The path of the working copy is shown in the dialog title for
       "check for modifications" and commit dialog. See Issue 98. (Stefan)
- NEW: Diffing files against their BASE improved. See Issue #94. (Stefan)
- NEW: 'Open with...' command in the commit dialog. (Stefan)
- NEW: Columns in the log dialog can be sorted. (Boris)
- CHG: The ESC key closes the progress dialog. See Issue #96. (Stefan)
- CHG: Reintroduce the doubleclick action in the log dialog. (Stefan)
- BUG: Crash in TSVNCache. See issue #91.
- BUG: File context menu shown if more than one folder was
       selected. See issue #92.
- BUG: Lock dialog could show folders. See issue #93.
- BUG: Commit dialog could crash when sorting. See issue #99.
- BUG: Installation for All Users didn't work properly. (Stefan)
- BUG: A file:/// path wasn't recognized as a valid windows path
       and a warning was shown even if the path was valid. (Stefan)
- BUG: The log dialog was always started from the repobrowser
       at HEAD revision instead of the selected revision. (Stefan)
- BUG: Wrong rendering/resizing of the listview in the folder
       browser dialog when exporting. (Stefan)
- BUG: The number of selected items was shown wrong in the commit dialog
       if an unversioned or deleted item was checked. (Stefan)
- BUG: Add 'Compare with WC/BASE' options to 'Check for Modification'.
       See issue #106. (Stefan)
- BUG: The switch command didn't work and crashed. (Stefan)
- BUG: The 'Lock' menu was shown for added files. (Stefan)
- BUG: TortoiseMerge wouldn't save files on UNC paths.
       See issue 108. (Stefan)
- BUG: The "check for modifications" dialog showed a wrong dialog title
       when "Check Repository" was clicked. (Stefan)

Version 1.2

Please first look at the release notes:
http://tortoisesvn.tigris.org/tsvn_1.2_releasenotes.html

- NEW: New commands to lock/unlock files. (Stefan)
- NEW: Locked files are listed in the commit dialog so the user